--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -14,7 +14,8 @@
   top: -50%;
   left: 50%;
   transform: translateX(-50%);
-  width: 150%;
+  width: 100%;
+  max-width: 100vw;
   height: 100%;
   border-radius: 50%;
   opacity: 0.6;
@@ -33,7 +34,8 @@
   top: -33.333333%;
   left: 50%;
   transform: translateX(-50%);
-  width: 120%;
+  width: 100%;
+  max-width: 100vw;
   height: 75%;
   border-radius: 50%;
   opacity: 0.4;
